Dev fix: Bring padding back inalignment with 1.11.x for header cells
Tests were failing as the different padding was causing columns to be wider. This wasn't needed so restoring as it was, tweaked to bring the left padding into alignment with the body cells and using the extra for the right padding when sorting icons are present

--- a/css/jquery.dataTables.scss
+++ b/css/jquery.dataTables.scss
@@ -58,7 +58,7 @@ table.dataTable {
 
 	thead th,
 	thead td {
-		padding: 10px 18px;
+		padding: 10px;
 
 		@if not $jqueryui { // jQuery UI defines its own border
 			border-bottom: $table-header-border;
